Changes in version 0.2.1.1-alpha - 2008-??-??
  o Major bugfixes:
    - Fix assertion failure that could occur when a blocked circuit became
      unblocked, and it had pending client DNS requests.  Bugfix on
      0.2.0.1-alpha.  Fixes bug 632.
    - List authority signatures as "unrecognized" based on DirServer lines,
      not on cert cache.  Bugfix on 0.2.0.x.

  o Minor bugfixes:
    - Stop giving double-close warn when we reject an address for client DNS.
    - On Windows, correctly detect errors when listing the contents of a
      directory.  Fix from lodger.  (Bugfix on 0.1.2.x.)
    - Fix the implementation of ClientDNSRejectInternalAddresses so that it
      actually works, and doesn't warn about every single reverse lookup.
      Fixes the other part of bug 617.  Bugfix on 0.2.0.1-alpha.
    - Keep address policies from leaking: start their refcount at 1, not
      2. Bugfix on 0.2.0.16-alpha.
    - Free authority certificates on exit, so they don't look like memory
      leaks.  Bugfix on 0.2.0.19-alpha.
    - Free static hashtables for policy maps and for TLS connections on
      shutdown, so they don't look like memory leaks.  Bugfix on 0.2.0.x.
    - Make relay cells written on a connection count as non-padding when
      tracking how long a connection has been in use. Bugfix on
      0.2.0.1-alpha.  Spotted by lodger.
    - Reduce the default smartlist size from 32 to 16; it turns out that
      most smartlists hold around 8-12 elements tops.
    - Avoid allocating extra space when computing consensuses on
      64-bit platforms.  Bug spotted by aakova.
    - Use recursive pthread mutexes in order to avoid deadlock when
      logging debug-level messages to a controller.  Bug spotted by
      nwf, bugfix on 0.2.0.16-alpha.
    - Warn less verbosely about clock skew from netinfo cells from
      untrusted sources.  Fixes bug 663.
    - Non-exit relays no longer allow DNS requests.  Fixes bug 619.
      Patch from Lodger.